redaction/tests/compile_fail/walk_external_type.stderr
error[E0277]: the trait bound `Record: serde::Serialize` is not satisfied
  --> tests/compile_fail/walk_external_type.rs:9:17
   |
 9 | #[derive(Clone, Sensitive)]
   |                 ^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Serialize` is not implemented for `Record`
  --> tests/compile_fail/walk_external_type.rs:10:1
   |
10 | struct Record {
   | ^^^^^^^^^^^^^
   = note: for local types consider adding `#[derive(serde::Serialize)]` to your `Record` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `Serialize`:
             &'a T
             &'a mut T
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
           and $N others
   = help: see issue #48214
   = note: this error originates in the derive macro `Sensitive` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `SystemTime` does not implement `SensitiveType`
  --> tests/compile_fail/walk_external_type.rs:14:5
   |
 9 | #[derive(Clone, Sensitive)]
   |                 --------- required by a bound introduced by this call
...
14 |     timestamp: SystemTime,
   |     ^^^^^^^^^ this type cannot be walked for sensitive data
   |
   = help: the trait `SensitiveType` is not implemented for `SystemTime`
   = note: use `#[derive(Sensitive)]` on the type definition
   = note: or use `#[sensitive(Classification)]` if this is a leaf value like String
   = help: the following other types implement trait `SensitiveType`:
             ()
             BTreeMap<K, V>
             BTreeSet<T>
             Box<T>
             Cow<'_, str>
             HashMap<K, V, S>
             HashSet<T, S>
             Record
           and $N others
